--- a/CSS/main.css
+++ b/CSS/main.css
@@ -75,7 +75,7 @@ body {
     width: 100%;
     font-size: xx-large;
     font-weight: bold;
-    font-family: cursive;
+    font-family: system-ui;
 
 }
 
